ci-operator/templates/openshift/installer/cluster-launch-installer-e2e: tail installer log in setup container
Instead of having to jump to a terminal and tail it yourself.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -737,6 +737,7 @@ objects:
             echo "${CLUSTER_NETWORK_MANIFEST}" > /tmp/artifacts/installer/manifests/cluster-network-03-config.yml
         fi
 
+        tail -F /tmp/artifacts/installer/.openshift_install.log &
         TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster 2>&1 | grep -v password &
         wait "$!"
 
