Add playground for redhat-operator-ecosystem

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -1100,6 +1100,18 @@ tide:
     - 'dco-signoff: no'
     orgs:
     - cri-o
+  - labels:
+    - lgtm
+    - approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/blocked-paths
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    repos:
+    - redhat-operator-ecosystem/playground
+    - redhat-operator-ecosystem/release
   rebase_label: tide/merge-method-rebase
   squash_label: tide/merge-method-squash
   status_update_period: 1m0s
