align worker instance type to e2e job

--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -420,6 +420,7 @@ objects:
         - name: worker
           replicas: 3
           platform:
+            type: m4.xlarge
             aws:
               zones:
               - us-east-2a
