ci-operator/config/openshift/cluster-etcd-operator: add e2e-gcp
Signed-off-by: Sam Batschelet <sbatsche@redhat.com>

--- a/ci-operator/config/openshift/cluster-etcd-operator/openshift-cluster-etcd-operator-master.yaml
+++ b/ci-operator/config/openshift/cluster-etcd-operator/openshift-cluster-etcd-operator-master.yaml
@@ -59,3 +59,7 @@ tests:
   commands: TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_installer:
     cluster_profile: azure4
+- as: e2e-gcp
+  commands: TEST_SUITE=openshift/conformance/parallel run-tests
+  openshift_installer:
+    cluster_profile: gcp
