adding ansible-tower-configuration repo to ci

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -408,6 +408,7 @@ tide:
     codeready-toolchain/toolchain-e2e: squash
     codeready-toolchain/toolchain-operator: squash
     coreos/rpm-ostree: rebase
+    integr8ly/ansible-tower-configuration: rebase
     integr8ly/heimdall: rebase
     openshift-knative/serverless-operator: squash
     openshift-knative/serving-operator: squash
@@ -1079,6 +1080,7 @@ tide:
     - integr8ly/cloud-resource-operator
     - integr8ly/installation
     - integr8ly/heimdall
+    - integr8ly/ansible-tower-configuration
   - labels:
     - lgtm
     - approved
