--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -70,6 +70,7 @@ approve:
   - integr8ly/cloud-resource-operator
   - integr8ly/installation
   - integr8ly/heimdall
+  - integr8ly/ansible-tower-configuration
   require_self_approval: true
 - lgtm_acts_as_approve: true
   repos:
@@ -1008,6 +1009,21 @@ external_plugins:
     - issue_comment
     - pull_request
     name: needs-rebase
+  integr8ly/ansible-tower-configuration:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://cherrypick
+    events:
+    - issue_comment
+    - pull_request
+    name: cherrypick
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   integr8ly/cloud-resource-operator:
   - endpoint: http://refresh
     events:
@@ -1577,6 +1593,29 @@ plugins:
   - approve
   heketi/heketi:
   - trigger
+  integr8ly/ansible-tower-configuration:
+  - assign
+  - blockade
+  - cat
+  - dog
+  - heart
+  - golint
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - override
+  - retitle
+  - shrug
+  - sigmention
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - wip
+  - yuks
+  - approve
   integr8ly/cloud-resource-operator:
   - assign
   - blockade
