add e2e-serial to openshift-apiserver

--- a/ci-operator/jobs/openshift/config/openshift-config-master-postsubmits.yaml
+++ b/ci-operator/jobs/openshift/config/openshift-config-master-postsubmits.yaml
@@ -3,10 +3,7 @@ postsubmits:
   - agent: kubernetes
     clone_uri: https://github.com/openshift/config.git
     decorate: true
-    decoration_config:
-      oauth_token_secret:
-        key: oauth
-        name: oauth-token
+    decoration_config: {}
     name: branch-ci-openshift-config-master-group-update
     run_if_changed: org/config.yaml
     spec:
@@ -27,10 +24,7 @@ postsubmits:
   - agent: kubernetes
     clone_uri: https://github.com/openshift/config.git
     decorate: true
-    decoration_config:
-      oauth_token_secret:
-        key: oauth
-        name: oauth-token
+    decoration_config: {}
     name: branch-ci-openshift-config-master-org-sync
     run_if_changed: org/config.yaml
     spec:
