--- a/ci-operator/config/openshift/openshift-apiserver/openshift-openshift-apiserver-master.yaml
+++ b/ci-operator/config/openshift/openshift-apiserver/openshift-openshift-apiserver-master.yaml
@@ -58,3 +58,7 @@ tests:
   openshift_installer:
     cluster_profile: aws
     upgrade: true
+- as: e2e-aws-serial
+  commands: TEST_SUITE=openshift/conformance/serial run-tests
+  openshift_installer:
+    cluster_profile: aws
