--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -13,8 +13,7 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        ./ci/prow_run_tests.sh /usr/local/integr8ly-ci-secrets
-        addons;
+        ./ci/prow_run_tests.sh /usr/local/integr8ly-ci-secrets addons;
       command:
       - /bin/bash
       - -c
