Use ci-scret-bootstrap for secrets with .login.password

--- a/cluster/ci/config/roles.yaml
+++ b/cluster/ci/config/roles.yaml
@@ -781,3 +781,29 @@ items:
     apiGroup: rbac.authorization.k8s.io
     name: admin
 
+- kind: ClusterRole
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: ci-admins-secret
+  rules:
+    - apiGroups:
+        - ""
+      resources:
+        - secrets
+      verbs:
+        - get
+        - create
+        - update
+        - patch
+- kind: ClusterRoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1beta1
+  metadata:
+    name: ci-admins-secret
+  subjects:
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: ci-admins
+  roleRef:
+    kind: ClusterRole
+    apiGroup: rbac.authorization.k8s.io
+    name: ci-admins-secret
