Create secret registry-push-credentials-quay.io-openshift-kni

--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -402,6 +402,14 @@
       name: registry-push-credentials-quay.io-openshift-knative
 - from:
     config.json:
+      bw_item: quay.io/openshift-kni
+      field: Push Credentials
+  to:
+    - cluster: default
+      namespace: ci
+      name: registry-push-credentials-quay.io-openshift-kni
+- from:
+    config.json:
       bw_item: quay.io/openshiftio
       field: Push Credentials
   to:
