--- a/ci-operator/config/johnbieren/observatorium-operator/johnbieren-observatorium-operator-master.yaml
+++ b/ci-operator/config/johnbieren/observatorium-operator/johnbieren-observatorium-operator-master.yaml
@@ -24,6 +24,6 @@ tag_specification:
   namespace: ocp
 tests:
 - as: test
-  commands: unset GOFLAGS && make deploy && make test
-  openshift_installer_src:
-    cluster_profile: gcp
+  commands: unset GOFLAGS && make test
+  container:
+    from: src
