Move periodics from knative-serving to serverless-operator.
The CI builds on knative-serving are somewhat useful, but the ones on serverless-operator are the ones we're really interested in. They are also a superset of the ones in knative-serving, so this should give us more insights.

--- a/ci-operator/jobs/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.4-periodics.yaml
+++ b/ci-operator/jobs/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.4-periodics.yaml
@@ -5,29 +5,28 @@ periodics:
   decoration_config:
     skip_cloning: true
   extra_refs:
-  - base_ref: release-v0.10.0
-    org: openshift
-    path_alias: knative.dev/serving
-    repo: knative-serving
+  - base_ref: release-1.4
+    org: openshift-knative
+    repo: serverless-operator
   labels:
     ci-operator.openshift.io/prowgen-controlled: "true"
     ci-operator.openshift.io/variant: "4.2"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-knative-serving-release-v0.10.0-4.2-e2e-aws-ocp-42-daily
+  name: periodic-ci-openshift-knative-serverless-operator-release-1.4-4.2-e2e-aws-ocp-42-continuous
   spec:
     containers:
     - args:
       - --artifact-dir=$(ARTIFACTS)
-      - --branch=release-v0.10.0
+      - --branch=release-1.4
       - --give-pr-author-access-to-namespace=true
       - --lease-server=http://boskos
-      - --org=openshift
-      - --repo=knative-serving
+      - --org=openshift-knative
+      - --repo=serverless-operator
       - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-      - --secret-dir=/usr/local/e2e-aws-ocp-42-daily-cluster-profile
+      - --secret-dir=/usr/local/e2e-aws-ocp-42-continuous-cluster-profile
       - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
-      - --target=e2e-aws-ocp-42-daily
-      - --template=/usr/local/e2e-aws-ocp-42-daily
+      - --target=e2e-aws-ocp-42-continuous
+      - --template=/usr/local/e2e-aws-ocp-42-continuous
       - --variant=4.2
       command:
       - ci-operator
@@ -37,10 +36,10 @@ periodics:
       - name: CONFIG_SPEC
         valueFrom:
           configMapKeyRef:
-            key: openshift-knative-serving-release-v0.10.0__4.2.yaml
+            key: openshift-knative-serverless-operator-release-1.4__4.2.yaml
             name: ci-operator-misc-configs
       - name: JOB_NAME_SAFE
-        value: e2e-aws-ocp-42-daily
+        value: e2e-aws-ocp-42-continuous
       - name: TEST_COMMAND
         value: make test-e2e
       image: ci-operator:latest
@@ -50,9 +49,9 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /usr/local/e2e-aws-ocp-42-daily-cluster-profile
+      - mountPath: /usr/local/e2e-aws-ocp-42-continuous-cluster-profile
         name: cluster-profile
-      - mountPath: /usr/local/e2e-aws-ocp-42-daily
+      - mountPath: /usr/local/e2e-aws-ocp-42-continuous
         name: job-definition
         subPath: cluster-launch-installer-src.yaml
       - mountPath: /etc/sentry-dsn
@@ -77,29 +76,28 @@ periodics:
   decoration_config:
     skip_cloning: true
   extra_refs:
-  - base_ref: release-v0.10.0
-    org: openshift
-    path_alias: knative.dev/serving
-    repo: knative-serving
+  - base_ref: release-1.4
+    org: openshift-knative
+    repo: serverless-operator
   labels:
     ci-operator.openshift.io/prowgen-controlled: "true"
     ci-operator.openshift.io/variant: "4.3"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-knative-serving-release-v0.10.0-4.3-e2e-aws-ocp-43-daily
+  name: periodic-ci-openshift-knative-serverless-operator-release-1.4-4.3-e2e-aws-ocp-43-continuous
   spec:
     containers:
     - args:
       - --artifact-dir=$(ARTIFACTS)
-      - --branch=release-v0.10.0
+      - --branch=release-1.4
       - --give-pr-author-access-to-namespace=true
       - --lease-server=http://boskos
-      - --org=openshift
-      - --repo=knative-serving
+      - --org=openshift-knative
+      - --repo=serverless-operator
       - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-      - --secret-dir=/usr/local/e2e-aws-ocp-43-daily-cluster-profile
+      - --secret-dir=/usr/local/e2e-aws-ocp-43-continuous-cluster-profile
       - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
-      - --target=e2e-aws-ocp-43-daily
-      - --template=/usr/local/e2e-aws-ocp-43-daily
+      - --target=e2e-aws-ocp-43-continuous
+      - --template=/usr/local/e2e-aws-ocp-43-continuous
       - --variant=4.3
       command:
       - ci-operator
@@ -109,10 +107,10 @@ periodics:
       - name: CONFIG_SPEC
         valueFrom:
           configMapKeyRef:
-            key: openshift-knative-serving-release-v0.10.0__4.3.yaml
+            key: openshift-knative-serverless-operator-release-1.4__4.3.yaml
             name: ci-operator-misc-configs
       - name: JOB_NAME_SAFE
-        value: e2e-aws-ocp-43-daily
+        value: e2e-aws-ocp-43-continuous
       - name: TEST_COMMAND
         value: make test-e2e
       image: ci-operator:latest
@@ -122,9 +120,9 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /usr/local/e2e-aws-ocp-43-daily-cluster-profile
+      - mountPath: /usr/local/e2e-aws-ocp-43-continuous-cluster-profile
         name: cluster-profile
-      - mountPath: /usr/local/e2e-aws-ocp-43-daily
+      - mountPath: /usr/local/e2e-aws-ocp-43-continuous
         name: job-definition
         subPath: cluster-launch-installer-src.yaml
       - mountPath: /etc/sentry-dsn
