--- a/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-master__4.3.yaml
+++ b/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-master__4.3.yaml
@@ -17,6 +17,11 @@ tests:
   commands: "make test-e2e"
   openshift_installer_src:
     cluster_profile: aws
+- as: e2e-aws-ocp-43-continuous
+  commands: "make test-e2e"
+  cron: "0 */6 * * *" # every six hours
+  openshift_installer_src:
+    cluster_profile: aws
 - as: upgrade-tests-aws-ocp-43
   commands: "make test-upgrade"
   openshift_installer_src:
