Add serving-operator fork to CI builds.

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -410,6 +410,7 @@ tide:
     coreos/rpm-ostree: rebase
     integr8ly/heimdall: rebase
     openshift-knative/serverless-operator: squash
+    openshift-knative/serving-operator: squash
     openshift-kni/baremetal-deploy: squash
     openshift/ansible-service-broker: squash
     openshift/cluster-api: rebase
@@ -902,6 +903,7 @@ tide:
     - openshift/whereabouts-cni
     - openshift/windows-machine-config-operator
     - openshift-knative/serverless-operator
+    - openshift-knative/serving-operator
     - operator-framework/ghostunnel
     - operator-framework/hadoop
     - operator-framework/helm
