SDCICD-148. Move from candidate-4.3 to fast-4.3 in osde2e tests.
The osde2e tests now use fast-4.3 instead of the candidate-4.3
Cincinnati channel.

--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -416,7 +416,7 @@ periodics:
       - name: OSD_ENV
         value: prod
       - name: UPGRADE_RELEASE_STREAM
-        value: candidate-4.3
+        value: fast-4.3
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -588,7 +588,7 @@ periodics:
       - name: OSD_ENV
         value: stage
       - name: UPGRADE_RELEASE_STREAM
-        value: candidate-4.3
+        value: fast-4.3
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
