Add retitle plugin to integr8ly repos

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1590,6 +1590,7 @@ plugins:
   - lgtm
   - lifecycle
   - override
+  - retitle
   - shrug
   - sigmention
   - size
@@ -1612,6 +1613,7 @@ plugins:
   - lgtm
   - lifecycle
   - override
+  - retitle
   - shrug
   - sigmention
   - size
@@ -1634,6 +1636,7 @@ plugins:
   - lgtm
   - lifecycle
   - override
+  - retitle
   - shrug
   - sigmention
   - size
@@ -1656,6 +1659,7 @@ plugins:
   - lgtm
   - lifecycle
   - override
+  - retitle
   - shrug
   - sigmention
   - size
