--- a/ci-operator/config/openshift/compliance-operator/openshift-compliance-operator-release-4.5.yaml
+++ b/ci-operator/config/openshift/compliance-operator/openshift-compliance-operator-release-4.5.yaml
@@ -13,6 +13,9 @@ images:
 - dockerfile_path: Dockerfile.ci
   from: base
   to: compliance-operator
+- dockerfile_path: images/resultscollector/Dockerfile.ci
+  from: base
+  to: compliance-resultscollector
 promotion:
   name: "4.5"
   namespace: ocp
