Use openshift-kni to promote performance-addon-operator image

--- a/ci-operator/config/openshift-kni/performance-addon-operators/openshift-kni-performance-addon-operators-master.yaml
+++ b/ci-operator/config/openshift-kni/performance-addon-operators/openshift-kni-performance-addon-operators-master.yaml
@@ -34,7 +34,7 @@ promotion:
   - operator-registry-base
   - performance-addon-operator-registry
   name: "performance-addon-operator"
-  namespace: ocp
+  namespace: openshift-kni
 resources:
   '*':
     limits:
