--- a/cluster/ci/config/prow/openshift/ci-operator/roles.yaml
+++ b/cluster/ci/config/prow/openshift/ci-operator/roles.yaml
@@ -210,6 +210,40 @@ items:
     name: ci-operator
     namespace: ci
 
+- kind: Role
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: image-tagger
+    namespace: openshift-kni
+  rules:
+  - apiGroups:
+    - ""
+    - image.openshift.io
+    attributeRestrictions: null
+    resources:
+    - imagestreamtags
+    - imagestreams
+    - imagestreamimports
+    verbs:
+    - update
+    - patch
+    - get
+    - create
+
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: image-tagger-ci-operator
+    namespace: openshift-kni
+  roleRef:
+    kind: Role
+    name: image-tagger
+    namespace: openshift-kni
+  subjects:
+  - kind: ServiceAccount
+    name: ci-operator
+    namespace: ci
+
 - kind: RoleBinding
   apiVersion: rbac.authorization.k8s.io/v1
   metadata:
