Add config_updater mapping for integr8ly release branches (e.g. v1.6)

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -343,6 +343,12 @@ config_updater:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
+    ci-operator/config/integr8ly/*/*-v*.*.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: ci-operator-misc-configs
     ci-operator/config/openshift/cluster-logging-operator/openshift-cluster-logging-operator-feature*.yaml:
       clusters:
         default:
@@ -506,6 +512,12 @@ config_updater:
       gzip: true
       name: job-config-misc
     ci-operator/jobs/**/infra-image-mirroring.yaml:
+      clusters:
+        default:
+        - ""
+      gzip: true
+      name: job-config-misc
+    ci-operator/jobs/integr8ly/*/*-v*.*.yaml:
       clusters:
         default:
         - ""
