Run the job periodically

--- a/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master.yaml
+++ b/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master.yaml
@@ -15,13 +15,10 @@ tag_specification:
   namespace: ocp
 tests:
   - as: "e2e-test"
+    cron: "0 */6 * * *" # every six hours
     commands: |
       set -euo pipefail
       echo "Running CNV product test"
       ./bootstrap.sh
-    secrets:
-      - name: openshift-cnv-dev-cnv-bot-pull-secret
-        mount_path: /etc/cnv-installer/pull-secret
-
     openshift_installer_src:
       cluster_profile: gcp
