Clean up populate-secrets-from-bitwarden.sh

--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -724,6 +724,16 @@
     - cluster: default
       namespace: ci
       name: aws-openshift-llc-account-credentials
+# Configuration for the .git-credentials used by the release controller to clone
+# private repositories to generate changelogs
+- from:
+    .git-credentials:
+      bw_item: openshift-bot
+      field: git_url_with_credentials
+  to:
+    - cluster: default
+      namespace: ci-release
+      name: git-credentials
 #oc --context default get secret -n ci cluster-secrets-azure -o yaml
 #https://github.com/openshift/release/blob/master/ci-operator/SECRETS.md#cluster-secrets-azure4
 #Need to ask Abhinav why this one is not under BW script
