--- a/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master.yaml
+++ b/ci-operator/config/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master.yaml
@@ -14,8 +14,15 @@ tag_specification:
   name: "4.3"
   namespace: ocp
 tests:
-  - as: "e2e-test"
+  - as: "e2e-test-cron"
     cron: "0 */6 * * *" # every six hours
+    commands: |
+      set -euo pipefail
+      echo "Running CNV product test"
+      ./bootstrap.sh
+    openshift_installer_src:
+      cluster_profile: gcp
+  - as: "e2e-test-presubmit"
     commands: |
       set -euo pipefail
       echo "Running CNV product test"
