--- a/ci-operator/jobs/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master-periodics.yaml
+++ b/ci-operator/jobs/openshift-cnv/cnv-ci/openshift-cnv-cnv-ci-master-periodics.yaml
@@ -11,7 +11,7 @@ periodics:
   labels:
     ci-operator.openshift.io/prowgen-controlled: "true"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-cnv-cnv-ci-master-e2e-test
+  name: periodic-ci-openshift-cnv-cnv-ci-master-e2e-test-cron
   spec:
     containers:
     - args:
@@ -22,10 +22,10 @@ periodics:
       - --org=openshift-cnv
       - --repo=cnv-ci
       - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-      - --secret-dir=/usr/local/e2e-test-cluster-profile
+      - --secret-dir=/usr/local/e2e-test-cron-cluster-profile
       - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
-      - --target=e2e-test
-      - --template=/usr/local/e2e-test
+      - --target=e2e-test-cron
+      - --template=/usr/local/e2e-test-cron
       command:
       - ci-operator
       env:
@@ -37,7 +37,7 @@ periodics:
             key: openshift-cnv-cnv-ci-master.yaml
             name: ci-operator-master-configs
       - name: JOB_NAME_SAFE
-        value: e2e-test
+        value: e2e-test-cron
       - name: TEST_COMMAND
         value: |
           set -euo pipefail
@@ -50,9 +50,9 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /usr/local/e2e-test-cluster-profile
+      - mountPath: /usr/local/e2e-test-cron-cluster-profile
         name: cluster-profile
-      - mountPath: /usr/local/e2e-test
+      - mountPath: /usr/local/e2e-test-cron
         name: job-definition
         subPath: cluster-launch-installer-src.yaml
       - mountPath: /etc/sentry-dsn
