--- a/cluster/ci/config/roles.yaml
+++ b/cluster/ci/config/roles.yaml
@@ -807,3 +807,46 @@ items:
     kind: ClusterRole
     apiGroup: rbac.authorization.k8s.io
     name: ci-admins-secret
+
+- kind: Namespace
+  apiVersion: v1
+  metadata:
+    name: hypershift-toolkit
+- kind: Group
+  apiVersion: v1
+  metadata:
+    name: hypershift-admin
+  users:
+  - csrwng
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1beta1
+  metadata:
+    name: admin
+    namespace: hypershift-toolkit
+  subjects:
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: hypershift-admin
+  - kind: Group
+    name: ci-admins
+    apiGroup: rbac.authorization.k8s.io
+  roleRef:
+    kind: ClusterRole
+    apiGroup: rbac.authorization.k8s.io
+    name: admin
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1beta1
+  metadata:
+    name: image-puller
+    namespace: hypershift-toolkit
+  subjects:
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: system:unauthenticated
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: system:authenticated
+  roleRef:
+    kind: ClusterRole
+    apiGroup: rbac.authorization.k8s.io
+    name: system:image-puller
