only run features unit tests if features dir changes
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
@@ -26,7 +26,7 @@ tests:
     commands: cd features && source hack/test_env.sh && export FEATURES="mcp performance" && make deploy && make functests
     openshift_installer_src:
       cluster_profile: aws      
-  - as: unit-tests
+  - as: features-unit-tests
     commands: cd features && make unittests
     container:
       from: src
