--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
@@ -365,7 +365,7 @@ objects:
             2) AZURE_REGION=centralus;;
             3) AZURE_REGION=centralus;;
             4) AZURE_REGION=centralus;;
-            5) AZURE_REGION=eastus;;
+            5) AZURE_REGION=centralus;;
             6) AZURE_REGION=eastus2;;
             7) AZURE_REGION=westus;;
             *) echo >&2 "invalid Azure region index"; exit 1;;
