Add secret cluster-secrets-azure4 into ci-secret-bootstrap

--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -628,7 +628,25 @@
     - cluster: default
       namespace: ci
       name: cluster-secrets-metal
-# cluster-secrets-azure is not synced. Need to ask DPP team for this.
+#azure4
+- from:
+    pull-secret:
+      bw_item: quay.io
+      attachment: pull-secret
+    osServicePrincipal.json:
+      bw_item: os4-installer.openshift-ci.azure
+      attachment: osServicePrincipal.json
+    ssh-privatekey:
+      bw_item: jenkins-ci-iam
+      attachment: ssh-privatekey
+    ssh-publickey:
+      bw_item: jenkins-ci-iam
+      attachment: ssh-publickey
+  to:
+    - cluster: default
+      namespace: ci
+      name: cluster-secrets-azure4
+# cluster-secrets-azure is not synced. Email sent to Jim about this.
 # azure:
 # codecov.io tokens we store for teams
 - from:
@@ -734,6 +752,3 @@
     - cluster: default
       namespace: ci-release
       name: git-credentials
-#oc --context default get secret -n ci cluster-secrets-azure -o yaml
-#https://github.com/openshift/release/blob/master/ci-operator/SECRETS.md#cluster-secrets-azure4
-#Need to ask Abhinav why this one is not under BW script
