ci-operator: Update the metering-operator instance size.

--- a/ci-operator/config/operator-framework/operator-metering/operator-framework-operator-metering-master.yaml
+++ b/ci-operator/config/operator-framework/operator-metering/operator-framework-operator-metering-master.yaml
@@ -61,7 +61,7 @@ tests:
     set -x
     # Increase the size of the machines so that there are machines large enough
     # to run Presto, and the full metering stack.
-    kubectl -n openshift-machine-api get machinesets -o name | grep worker | cut -d/ -f2 | xargs -I{} kubectl -n openshift-machine-api patch machineset {} --type json -p '[{"op": "replace", "path": "/spec/template/spec/providerSpec/value/instanceType", "value": "m4.xlarge"}]'
+    kubectl -n openshift-machine-api get machinesets -o name | grep worker | cut -d/ -f2 | xargs -I{} kubectl -n openshift-machine-api patch machineset {} --type json -p '[{"op": "replace", "path": "/spec/template/spec/providerSpec/value/instanceType", "value": "m4.2xlarge"}]'
     # delete the workers so that larger machines replace it
     # wait=false because the machines never actually get deleted from the
     # API
