--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -694,6 +694,7 @@ tide:
     labels:
     - lgtm
     - approved
+    - bugzilla/valid-bug
     missingLabels:
     - needs-rebase
     - do-not-merge/blocked-paths
