prow: mount config for 4.6
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -550,6 +550,9 @@ periodics:
       - name: job-config-45
         mountPath: /etc/job-config/4.5
         readOnly: true
+      - name: job-config-46
+        mountPath: /etc/job-config/4.6
+        readOnly: true
     volumes:
     - name: token
       secret:
@@ -584,6 +587,9 @@ periodics:
     - name: job-config-45
       configMap:
         name: job-config-4.5
+    - name: job-config-46
+      configMap:
+        name: job-config-4.6
 - agent: kubernetes
   labels:
     ci.openshift.io/role: infra
