--- a/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
+++ b/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
@@ -157,6 +157,9 @@ items:
           - name: release-45
             mountPath: /etc/configs/release-4.5
             readOnly: true
+          - name: release-46
+            mountPath: /etc/configs/release-4.6
+            readOnly: true
           resources:
             requests:
               memory: "2Gi"
@@ -189,3 +192,6 @@ items:
         - name: release-45
           configMap:
             name: ci-operator-4.5-configs
+        - name: release-46
+          configMap:
+            name: ci-operator-4.6-configs
