--- a/core-services/prow/03_deployment/horologium.yaml
+++ b/core-services/prow/03_deployment/horologium.yaml
@@ -62,6 +62,9 @@ items:
           - name: job-config-45
             mountPath: /etc/job-config/4.5
             readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
+            readOnly: true
           resources:
             requests:
               memory: "1.5Gi"
@@ -97,3 +100,6 @@ items:
         - name: job-config-45
           configMap:
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
