--- a/core-services/prow/03_deployment/plank.yaml
+++ b/core-services/prow/03_deployment/plank.yaml
@@ -94,6 +94,9 @@ items:
           - name: job-config-45
             mountPath: /etc/job-config/4.5
             readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
+            readOnly: true
           - mountPath: /etc/build-farm-credentials
             name: build-farm-credentials
             readOnly: true
@@ -135,6 +138,9 @@ items:
         - name: job-config-45
           configMap:
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
         - name: build-farm-credentials
           secret:
             items:
