--- a/core-services/prow/03_deployment/statusreconciler.yaml
+++ b/core-services/prow/03_deployment/statusreconciler.yaml
@@ -64,6 +64,9 @@ spec:
         - name: job-config-45
           mountPath: /etc/job-config/4.5
           readOnly: true
+        - name: job-config-46
+          mountPath: /etc/job-config/4.6
+          readOnly: true
         - name: plugins
           mountPath: /etc/plugins
           readOnly: true
@@ -105,6 +108,9 @@ spec:
       - name: job-config-45
         configMap:
           name: job-config-4.5
+      - name: job-config-46
+        configMap:
+          name: job-config-4.6
       - name: plugins
         configMap:
           name: plugins
