--- a/core-services/prow/03_deployment/tide.yaml
+++ b/core-services/prow/03_deployment/tide.yaml
@@ -100,6 +100,9 @@ items:
           - name: job-config-45
             mountPath: /etc/job-config/4.5
             readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
+            readOnly: true
           - name: tmp
             mountPath: /tmp
           - name: service-account
@@ -143,6 +146,9 @@ items:
         - name: job-config-45
           configMap:
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
         - name: tmp
           emptyDir: {}
         - name: service-account
