--- a/core-services/release-controller/deploy-ocp-controller.yaml
+++ b/core-services/release-controller/deploy-ocp-controller.yaml
@@ -109,6 +109,9 @@ items:
         - configMap:
             defaultMode: 420
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
           name: job-config-45
         containers:
         - name: controller
@@ -143,6 +146,9 @@ items:
             readOnly: true
           - name: job-config-45
             mountPath: /etc/job-config/4.5
+            readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
             readOnly: true
           command:
           - /usr/bin/release-controller
