--- a/core-services/ci-chat-bot/deploy.yaml
+++ b/core-services/ci-chat-bot/deploy.yaml
@@ -63,6 +63,9 @@ items:
         - configMap:
             defaultMode: 420
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
           name: job-config-45
         containers:
         - name: bot
@@ -97,6 +100,9 @@ items:
             readOnly: true
           - name: job-config-45
             mountPath: /etc/job-config/4.5
+            readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
             readOnly: true
           env:
           - name: BOT_TOKEN
