--- a/core-services/prow/03_deployment/jenkins_operator.yaml
+++ b/core-services/prow/03_deployment/jenkins_operator.yaml
@@ -94,6 +94,9 @@ items:
           - name: job-config-45
             mountPath: /etc/job-config/4.5
             readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
+            readOnly: true
           resources:
             requests:
               memory: "250Mi"
@@ -136,6 +139,9 @@ items:
         - name: job-config-45
           configMap:
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
 
 - apiVersion: v1
   kind: Service
@@ -242,6 +248,9 @@ items:
           - name: job-config-45
             mountPath: /etc/job-config/4.5
             readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
+            readOnly: true
           resources:
             requests:
               memory: "250Mi"
@@ -284,6 +293,9 @@ items:
         - name: job-config-45
           configMap:
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
 
 - apiVersion: v1
   kind: Service
@@ -387,6 +399,9 @@ items:
           - name: job-config-45
             mountPath: /etc/job-config/4.5
             readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
+            readOnly: true
           resources:
             requests:
               memory: "250Mi"
@@ -429,3 +444,6 @@ items:
         - name: job-config-45
           configMap:
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
