--- a/core-services/prow/03_deployment/tot.yaml
+++ b/core-services/prow/03_deployment/tot.yaml
@@ -97,6 +97,9 @@ items:
           - name: job-config-45
             mountPath: /etc/job-config/4.5
             readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
+            readOnly: true
           resources:
             requests:
               memory: "250Mi"
@@ -135,3 +138,6 @@ items:
         - name: job-config-45
           configMap:
             name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
